--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
             padding-top: 100px; /* Ajusta para que a navbar fixa não cubra o conteúdo */
             margin: 0;
-            background-image: url("https://cdn.pixabay.com/photo/2019/05/03/17/43/flag-4176448_1280.jpg");
+            background: linear-gradient(145deg, #1e293b, #334155);
             background-size: cover;
             background-position: center center;
             height: 120vh;
@@ -20,7 +20,7 @@
 
             .navbar-custom {
 
-                background-image: url("https://i.pinimg.com/736x/6c/c2/ba/6cc2bae44a3ba4eb64e9c4938579689f.jpg");
+                background: linear-gradient(145deg, #1e293b, #334155);
                 background-color: rgba(0, 0, 0, 0.5);
                 background-size: cover;
                 background-position: center;
@@ -347,6 +347,15 @@
 
             .table-dark td, .table-dark th {
 
+                border: 1px solid #5e5858;
+                padding: 15px;
+                text-align: center;
+            }
+
+            .table-dark td {
+                
+                color: #000 !important; /* Força o texto preto */
+                background-color: #fff; /* Fundo branco ou ajuste a seu gosto */
                 border: 1px solid #5e5858;
                 padding: 15px;
                 text-align: center;
