--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
             padding-top: 100px; /* Ajusta para que a navbar fixa não cubra o conteúdo */
             margin: 0;
-            background: linear-gradient(145deg, #1e293b, #334155);
+            background: linear-gradient(145deg, #606c88, #3f4c6b);
             background-size: cover;
             background-position: center center;
             height: 120vh;
